--- a/videos.html
+++ b/videos.html
@@ -15,7 +15,7 @@
 
         <header id="header">
 
-            <a href="portfolio.html">
+            <a href="index.html">
                 <img src="header-material/cameron.001.png" class="heading" alt="Cameron" width="100"></a>
             <nav id="main-nav">
                 <ul>
@@ -23,7 +23,7 @@
                     <li><a href="videos.html" class="active">Videos</a></li>
                     <li><a href="music.html">Music</a></li>
                     <li><a href="photos.html">Photography</a></li>
-                    <li><a href="portfolio.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                 </ul>
             </nav>
             <hr class="newBlack">
