--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>helvetet syns</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -35,28 +35,26 @@
             <article id="home">
                 <img src="header-material/vikanlatsas.png" alt="text saying we can at least pretend" width="960">
 
-                <div id="about">
+                <div class="about">
                     <div class="box1">
                         <h3>Lorem ipsum</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni pariatur quia repudiandae
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni pariatur quia repudiandae
                             doloribus possimus maxime natus! Quam suscipit nemo possimus modi corporis cumque harum
                             sequi
-                            iure mollitia perferendis. Sit, harum!''</p>
+                            iure mollitia perferendis. Sit, harum!''
                     </div>
 
                     <div class="box2">
                         <h3>Lorem ipsum</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni pariatur quia repudiandae
-                            doloribus possimus maxime natus! Quam suscipit nemo possimus modi corporis cumque harum
-                            sequi
-                            iure mollitia perferendis. Sit, harum!''</p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni pariatur quia repudiandae
+                            doloribus possimus maxime natus! 
                     </div>
                     <div class="box3">
                         <h3>Lorem ipsum</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni pariatur quia repudiandae
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni pariatur quia repudiandae
                             doloribus possimus maxime natus! Quam suscipit nemo possimus modi corporis cumque harum
                             sequi
-                            iure mollitia perferendis. Sit, harum!''</p>
+                            
                     </div>
                 </div>
 
